--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
             <div class="container">
                 <div class="vertical-text-block fade-in">
                     <p class="intro-lead">この記事を読んでいるあなたへ</p>
-                    <p>もし、心の奥底で「こんなはずじゃなかった」と感じているなら、<br>
-                        もし、本当の自分はもっと輝けるはずだと信じているなら、<br>
-                        この先を、一文字も読み飛ばさずに読み進めてください。</p>
-                    <p class="emphasis-text">あなたの人生が、ここから変わるかもしれません。</p>
+                    <p>もし、心の奥底で<br>
+                        「こんなはずじゃなかった」と<br>
+                        感じているなら<br><br>
+                        もし、本当の自分は<br>
+                        もっと輝けるはずだと信じているなら<br><br>
+                        この先を、一文字も読み飛ばさずに<br>
+                        読み進めてください。</p>
+                    <p class="emphasis-text">あなたの人生が、
+                        <br>ここから変わるかもしれません。</p>
                 </div>
             </div>
         </section>
@@ -72,31 +77,45 @@
                         <li>「心から信頼できるパートナーと出会いたい」</li>
                         <li>「やりがいのある仕事で成功を収めたい」</li>
                         <li>「いつまでも若々しく、健康でいたい」</li>
-                        <li>「家族や大切な人たちに、ただ幸せでいてほしい」</li>
+                        <li>「大切な人たちに幸せでいてほしい」</li>
                     </ul>
-                    <p>——その純粋な想いは、今もあなたの心の中で、確かに燃えているはずです。</p>
+                    <p>その純粋な想いは、今もあなたの心の中で、<br>
+                        確かに燃えているはずです。</p>
 
                     <div class="problem-highlight">
-                        <p>しかし、その美しい願いの裏側で、<br>こんな”呪いの言葉”が、一日中あなたの頭の中で鳴り響いていませんか？</p>
+                        <p>しかし、その美しい願いの裏側で、<br>こんな”呪いの言葉”も、一日中あなたの頭の中で<br>
+                            鳴り響いていませんか？</p>
                         <ul class="curse-list">
                             <li>「どうせ私には、才能なんてない」</li>
                             <li>「また失敗するのが怖い」</li>
                             <li>「もう、いい歳なんだから…」</li>
-                            <li>「あの人と比べて、私はなんてダメなんだろう」</li>
+                            <li>「私はなんてダメなんだろう」</li>
                             <li>「結局、何も変わらないんじゃないか」</li>
                         </ul>
-                        <p class="strong-text">その声こそが、あなたの可能性を蝕む「心の雑音」なのです。</p>
+                        <p class="strong-text">その声こそが、<br>
+                            あなたの可能性を蝕む<br>
+                            「心の雑音」なのです。</p>
                     </div>
 
-                    <p>私たちの願いは、本来、宇宙を震わせる力を持つ「波動」が大きく関係しています。</p>
-                    <p>その音が清らかで、澄み切っているほど、願いは光の速さで天に届き、現実のものとなり、<br>
-                        不安、焦り、自己否定といった無数の雑音が混ざり合うと、<br>
-                        その波動は濁り、かき消され、誰にも届かない虚しい響きとなってしまうのです。</p>
+                    <p>私たちの願いは、本来、宇宙を震わせる力を持つ<br>
+                        「波動」が大きく関係しています。</p>
+                    <p>その音が清らかで、澄み切っているほど、<br>
+                        願いは光の速さで天に届き、現実のものとなり、<br>
+                        不安、焦り、自己否定といった<br>
+                        無数の雑音が混ざり合うと、<br>
+                        その波動は濁り、かき消され、<br>
+                        誰にも届かない、虚しい響きとなってしまうのです。</p>
 
-                    <p class="message-break">もう、自分を責めるのは終わりにしませんか？</p>
-                    <p>あなたの願いが叶わないのは、あなたの努力が足りないからでも、才能がないからでもありません。</p>
+                    <p class="message-break">もう、自分を責めるのは、<br>
+                        終わりにしませんか？</p>
+                    <p>あなたの願いが叶わないのは、<br>
+                        あなたの努力が足りないからでも、<br>
+                        才能がないからでもありません。</p>
                     <p class="emphasis-large">ただ、その方法を知らなかった。<br>それだけなのです。</p>
-                    <p>心の雑音を鎮め、魂が放つ本来の音を、宇宙に響かせる方法を。<br>その答えが、ここにあります。</p>
+                    <p>心の雑音を鎮め、<br>
+                        魂が放つ本来の音を、<br>
+                        宇宙に響かせる方法を。<br>
+                        <p class="strong-text">その答えが、ここにあります。</p>
                 </div>
             </div>
         </section>
@@ -105,15 +124,21 @@
         <section class="section section-solution">
             <div class="bg-layer bg-clear"></div>
             <div class="container">
-                <h2 class="section-title fade-in">『鳴響 – めいきょう –』とは何か？</h2>
+                <h2 class="section-title fade-in">『鳴響 』とは何か？</h2>
 
                 <div class="content-wrapper fade-in">
-                    <p>『鳴響』は、あなたの内なる波動を神聖なレベルで調律し、願いを天に届けるために、<br>
-                        龍神様の絶対的な導きによって、この特別な時代のために用意された究極のヒーリングセッションです。</p>
+                    <p>『鳴響』は、あなたの内なる波動を<br>
+                        神聖なレベルまで調律するために、<br>
+                        龍神様の絶対的な導きによって、<br>
+                        特別に用意された、究極のヒーリングセッションです。</p>
                     <p>これは、単なる癒やしではありません。</p>
-                    <p>あなたの魂を覆う、分厚い雲や重たい鎖を断ち切り、<br>
-                        生まれ持った本来の輝きを解き放つための、神聖な神事なのです。</p>
-                    <p>それは、「手放し」「整え」「響かせる」という、<br>魂の変容に不可欠な三つの段階を経て、完璧な流れで執り行われます。</p>
+                    <p>あなたの魂を覆う、<br>
+                        分厚い雲や重たい鎖を断ち切り、<br>
+                        生まれ持った本来の輝きを解き放つための、<br>
+                        神聖な神事なのです。</p>
+                    <p>それは、「手放し」「整え」「響かせる」という、<br>
+                        魂の変容に不可欠な三つの段階を経て、<br>
+                        完璧な流れで執り行われます。</p>
                 </div>
 
                 <div class="steps-container">
@@ -121,29 +146,45 @@
                     <div class="step-card fade-in">
                         <div class="step-number">1</div>
                         <h3 class="step-title">手放す<span class="step-subtitle">（魂の大浄化）</span></h3>
-                        <p>まず、あなたの魂にこびり付いた、あらゆるネガティブなエネルギーを根こそぎ浄化します。</p>
-                        <p>過去のトラウマ、拭えない後悔、他人への嫉妬、自分への失望。</p>
-                        <p>それら全ての重荷を、龍神様の炎で焼き尽くし、天へと還します。</p>
-                        <p>そうして生まれた魂の神聖な「空白」こそが、新しい運命と無限の豊かさを受け入れるための器となるのです。</p>
+                        <p>まず、あなたの魂にこびり付いた、<br>
+                            あらゆるネガティブなエネルギーを浄化します。</p>
+                        <p>過去のトラウマ、拭えない後悔、<br>
+                            他人への嫉妬、自分への失望。</p>
+                        <p>それら全ての重荷を、龍神様のお力で整えていきます。</p>
+                        <p>そうして生まれた「心の余白」こそが、<br>
+                            新しい運命と無限の豊かさを<br>
+                            受け入れるための器となるのです。</p>
                     </div>
 
                     <!-- Step 2 -->
                     <div class="step-card fade-in">
                         <div class="step-number">2</div>
                         <h3 class="step-title">整える<span class="step-subtitle">（龍神による波動の調律）</span></h3>
-                        <p>次に、完全に清らかになったあなたの魂と向き合い、「本当に叶えたい、唯一の願い」を見つけ出します。</p>
-                        <p>それは欲望や恐怖から生まれた偽りの願いではありません。<br>あなたの魂が、この世に生まれる前から望んでいた、真実の願いです。</p>
-                        <p>その純粋な願いが、寸分の狂いもなく天に届くよう、龍神様の絶大な力を借りて、あなたの波動を神聖な周波数へと調律します。</p>
-                        <p>この祈りが、あなたの未来を永遠に照らし続ける「魂の北極星」となります。</p>
+                        <p>次に、完全に清らかになったあなたの魂と向き合い、<br>
+                            「本当に叶えたい、唯一の願い」を見つけ出します。</p>
+                        <p>それは欲望や恐怖から生まれた<br>
+                            偽りの願いではありません。<br>
+                            あなたの魂が、この世に生まれる前から<br>
+                            望んでいた、真実の願いです。</p>
+                        <p>その純粋な願いが、寸分の狂いもなく<br>
+                            天に届くよう、龍神様の絶大な力を借りて、<br>
+                            あなたの波動を調律します。</p>
+                        <p>この祈りが、あなたの未来を<br>
+                            永遠に照らし続ける「魂の北極星」となるでしょう。</p>
                     </div>
 
                     <!-- Step 3 -->
                     <div class="step-card fade-in">
                         <div class="step-number">3</div>
                         <h3 class="step-title">響かせる<span class="step-subtitle">（宇宙への宣言と現実創造）</span></h3>
-                        <p>最後に、あなたの願いと龍神様の祈祷の力が込められた、あなただけの特別な音具「天響（てんきょう）」を用いて、その神聖な音を宇宙の果てまで響かせます。</p>
-                        <p>これは、あなたの新しい運命の始まりを告げる、宇宙への高らかな宣言です。</p>
-                        <p>この音を鳴らすたび、あなたの波動は常に最高の状態に保たれ、運命の歯車が、あなたの望む未来へと力強く回転を始めるのです。</p>
+                        <p>最後に、あなたの願いと<br>
+                            龍神様の祈祷の力が込められた、<br>
+                            あなただけの特別な音具「天響（てんきょう）」を用いて、<br>
+                            その神聖な音を宇宙の果てまで響かせます。</p>
+                        <p>これは、あなたの新しい運命の始まりを告げる、<br>
+                            宇宙への高らかな宣言です。</p>
+                        <p>この音を鳴らすたび、あなたの波動は常に最高の状態に保たれ、<br>
+                            運命の歯車が、あなたの望む未来へと力強く回転を始めるのです。</p>
                     </div>
                 </div>
             </div>
@@ -155,8 +196,11 @@
             <div class="container">
                 <h2 class="section-title fade-in">『鳴響』がもたらす<br>人生の劇的変化</h2>
                 <div class="content-wrapper fade-in">
-                    <p>このセッションを通じて、あなたの内面と現実は、もはや以前とは比べ物にならないほど、深く、そして劇的に変容を遂げるでしょう。</p>
-                    <p>心の雑音が完全に消え、魂が本来の力を取り戻したとき、あなたはどんな自分になっているでしょうか。</p>
+                    <p>このセッションを通じて、あなたの内面と現実は、<br>
+                        もはや以前とは比べ物にならないほど、<br>
+                        深く、そして劇的に変容を遂げるでしょう。</p>
+                    <p>心の雑音が完全に消え、魂が本来の力を取り戻したとき、<br>
+                        あなたはどんな自分になっているでしょうか。</p>
                 </div>
 
                 <div class="benefits-grid">
@@ -303,5 +347,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
