--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@
         <section class="section section-solution">
             <div class="bg-layer bg-clear"></div>
             <div class="container">
-                <h2 class="section-title fade-in">『鳴響 』とは何か？</h2>
+                <h2 class="section-title fade-in">『鳴響』とは何か？</h2>
 
                 <div class="content-wrapper fade-in">
                     <p>『鳴響』は、あなたの内なる波動を<br>
                         神聖なレベルまで調律するために、<br>
                         龍神様の絶対的な導きによって、<br>
-                        特別に用意された、究極のヒーリングセッションです。</p>
+                        特別に用意された、<br>
+                        究極のヒーリングセッションです。</p>
                     <p>これは、単なる癒やしではありません。</p>
                     <p>あなたの魂を覆う、<br>
                         分厚い雲や重たい鎖を断ち切り、<br>
@@ -147,10 +148,12 @@
                         <div class="step-number">1</div>
                         <h3 class="step-title">手放す<span class="step-subtitle">（魂の大浄化）</span></h3>
                         <p>まず、あなたの魂にこびり付いた、<br>
-                            あらゆるネガティブなエネルギーを浄化します。</p>
+                            あらゆるネガティブな<br>
+                            エネルギーを浄化します。</p>
                         <p>過去のトラウマ、拭えない後悔、<br>
                             他人への嫉妬、自分への失望。</p>
-                        <p>それら全ての重荷を、龍神様のお力で整えていきます。</p>
+                        <p>それら全ての重荷を、<br>
+                            龍神様のお力で整えていきます。</p>
                         <p>そうして生まれた「心の余白」こそが、<br>
                             新しい運命と無限の豊かさを<br>
                             受け入れるための器となるのです。</p>
@@ -170,7 +173,8 @@
                             天に届くよう、龍神様の絶大な力を借りて、<br>
                             あなたの波動を調律します。</p>
                         <p>この祈りが、あなたの未来を<br>
-                            永遠に照らし続ける「魂の北極星」となるでしょう。</p>
+                            永遠に照らし続ける<br>
+                            「魂の北極星」となるでしょう。</p>
                     </div>
 
                     <!-- Step 3 -->
@@ -179,12 +183,16 @@
                         <h3 class="step-title">響かせる<span class="step-subtitle">（宇宙への宣言と現実創造）</span></h3>
                         <p>最後に、あなたの願いと<br>
                             龍神様の祈祷の力が込められた、<br>
-                            あなただけの特別な音具「天響（てんきょう）」を用いて、<br>
+                            あなただけの特別な音具<br>
+                            「天響（てんきょう）」を用いて、<br>
                             その神聖な音を宇宙の果てまで響かせます。</p>
-                        <p>これは、あなたの新しい運命の始まりを告げる、<br>
+                        <p>これは、あなたの新しい運命の<br>
+                            始まりを告げる、<br>
                             宇宙への高らかな宣言です。</p>
-                        <p>この音を鳴らすたび、あなたの波動は常に最高の状態に保たれ、<br>
-                            運命の歯車が、あなたの望む未来へと力強く回転を始めるのです。</p>
+                        <p>この音を鳴らすたび、あなたの波動は常に<br>
+                            最高の状態に保たれ、<br>
+                            運命の歯車が、あなたの望む未来へと<br>
+                            力強く回転を始めるのです。</p>
                     </div>
                 </div>
             </div>
@@ -199,30 +207,49 @@
                     <p>このセッションを通じて、あなたの内面と現実は、<br>
                         もはや以前とは比べ物にならないほど、<br>
                         深く、そして劇的に変容を遂げるでしょう。</p>
-                    <p>心の雑音が完全に消え、魂が本来の力を取り戻したとき、<br>
+                    <p>心の雑音が完全に消え、<br>
+                        魂が本来の力を取り戻したとき、<br>
                         あなたはどんな自分になっているでしょうか。</p>
                 </div>
 
                 <div class="benefits-grid">
                     <div class="benefit-item fade-in">
                         <h3 class="benefit-title">揺るぎない心の平穏と<br>絶対的な自己肯定感</h3>
-                        <p>朝、目覚めた瞬間に感じていた理由のない不安が、深い安心感と喜びに変わります。<br>
-                            他人の評価に一喜一憂する人生は終わり、何があっても「私は大丈夫」と心から思える、揺るぎない自信が内側から湧き上がってきます。</p>
+                        <p>朝、目覚めた瞬間に感じていた理由のない<br>
+                            不安が、深い安心感と喜びに変わります。<br>
+                            他人の評価に一喜一憂する人生は終わり、<br>
+                            何があっても「私は大丈夫」と心から思える、<br>
+                            揺るぎない自信が内側から湧き上がってきます。</p>
                     </div>
                     <div class="benefit-item fade-in">
                         <h3 class="benefit-title">愛と豊かさに満ちた<br>人間関係</h3>
-                        <p>あなたを傷つけ、エネルギーを奪うだけの関係は自然と終わりを告げ、心から信頼し合える仲間が、面白いように引き寄せられてきます。<br>
-                            世界はこんなにも優しく、愛に満ちていたのだと、涙が出るほどの感動を味わうでしょう。</p>
+                        <p>あなたを傷つけ、エネルギーを奪うだけの<br>
+                            関係は自然と終わりを告げ、心から<br>
+                            信頼し合える仲間が、面白いように<br>
+                            引き寄せられてきます。<br>
+                            世界はこんなにも優しく、<br>
+                            愛に満ちていたのだと、<br>
+                            涙が出るほどの感動を味わうでしょう。</p>
                     </div>
                     <div class="benefit-item fade-in">
                         <h3 class="benefit-title">無限の豊かさへの<br>ブロック解除</h3>
-                        <p>「お金は苦労して稼ぐもの」という呪縛から完全に解放されます。<br>
-                            まるで息をするように、豊かさが四方八方から流れ込み、経済的な自由を手に入れることで、あなたは本当にやりたかったことに、人生の全ての時間を使えるようになります。</p>
+                        <p>「お金は苦労して稼ぐもの」という<br>
+                            呪縛から完全に解放されます。<br>
+                            まるで息をするように、豊かさが<br>
+                            四方八方から流れ込み、経済的な<br>
+                            自由を手に入れることで、<br>
+                            あなたは本当にやりたかったことに、<br>
+                            人生の全ての時間を使えるようになります。</p>
                     </div>
                     <div class="benefit-item fade-in">
                         <h3 class="benefit-title">魂の羅針盤である<br>「直感力」の覚醒</h3>
-                        <p>人生のあらゆる岐路において、迷うことがなくなります。<br>
-                            あなたの魂が発する、静かで、しかし絶対的な確信に満ちた声が、常にあなたを最善の道へと導いてくれるからです。 あなたはただ、その声に従うだけで、全てがうまくいくようになります。</p>
+                        <p>人生のあらゆる岐路において、<br>
+                            迷うことがなくなります。<br>
+                            あなたの魂が発する、静かで、<br>
+                            しかし絶対的な確信に満ちた声が、<br>
+                            常にあなたを最善の道へと導いてくれるからです。<br>
+                            あなたはただ、その声に従うだけで、<br>
+                            全てがうまくいくようになります。</p>
                     </div>
                 </div>
             </div>
@@ -242,14 +269,23 @@
                         <p class="testimonial-author">（A.S様・30代・女性・会社員）</p>
                     </div>
                     <div class="testimonial-card fade-in">
-                        <p class="testimonial-quote">「お金のブロックが外れ、月収が3倍になりました」</p>
+                        <p class="testimonial-quote">「お金のブロックが外れ、<br>
+                            月収が3倍になりました」</p>
                         <p class="testimonial-text">
-                            ずっと「自分には稼ぐ才能がない」と思い込んでいました。でも、『鳴響』で自分の内なる声と向き合ったとき、その思い込みがただの幻想だったことに気づかされました。セッション後、不思議と仕事のアイデアが次々と湧いてきて、独立を決意。今では会社員時代の3倍以上の収入を得ています。何より、毎日が楽しくて仕方ありません。
+                            ずっと「自分には稼ぐ才能がない」と思い込んでいました。<br>
+                            でも、『鳴響』で自分の内なる声と<br>
+                            向き合ったとき、その思い込みが<br>
+                            ただの幻想だったことに気づかされました。<br>
+                            セッション後、不思議と仕事のアイデアが<br>
+                            次々と湧いてきて、独立を決意。<br>
+                            今では会社員時代の3倍以上の収入を得ています。<br>
+                            何より、毎日が楽しくて仕方ありません。
                         </p>
                         <p class="testimonial-author">（T.K様・40代・男性・自営業）</p>
                     </div>
                     <div class="testimonial-card fade-in">
-                        <p class="testimonial-quote">「自分を愛せるようになり、人生が輝き始めました」</p>
+                        <p class="testimonial-quote">「自分を愛せるようになり、<br>
+                            人生が輝き始めました」</p>
                         <p class="testimonial-text">
                             長年、自己肯定感が低く、何をするにも自信がありませんでした。でも、このセッションで魂の浄化を体験し、心の底から「自分は自分でいいんだ」と思えるように。すると、周りの反応もガラリと変わり、たくさんの人から優しさや愛情を受け取れるようになりました。人生で初めて、自分が大好きだと言えます。
                         </p>
@@ -264,7 +300,8 @@
             <div class="container">
                 <div class="vertical-text-block fade-in">
                     <p>想像してみてください。</p>
-                    <p>不安や欠乏感から完全に解放され、<br>絶対的な自信と無限の豊かさに満ちた、新しいあなたを。</p>
+                    <p>不安や欠乏感から完全に解放され、<br>絶対的な自信と無限の豊かさに満ちた、<br>
+                        新しいあなたを。</p>
                     <p>鳴響を受けることでこれだけの劇的な変容が、<br>あなたを待っているのです。</p>
                     <p class="section-break">では、この人生の新しい扉を、<br>最も確実かつ強力に開くためには、<br>どうすればいいのでしょうか？</p>
                     <p>その鍵を握るのが、<br>この神聖な儀式を行う「タイミング」です。</p>
@@ -278,14 +315,28 @@
             <div class="container">
                 <h2 class="section-title fade-in">なぜ「年末年始」で<br>なければならないのか？</h2>
                 <div class="content-wrapper fade-in">
-                    <p>なぜ、この神聖な神事が、一年のうちで最も慌ただしい「年末年始」に行われるのか？</p>
-                    <p>それは、この時期が、宇宙レベルでエネルギーの質が劇的に変化する、一年で最もパワフルな期間だからです。</p>
-                    <p>大晦日の除夜の鐘、新年を迎えるカウントダウン、初日の出への祈り。</p>
+                    <p>なぜ、この神聖な神事が、一年のうちで最も慌ただしい<br>
+                        「年末年始」に行われるのか？</p>
+                    <p>それは、この時期が、<br>
+                        宇宙レベルでエネルギーの質が劇的に変化する、<br>
+                        一年で最もパワフルな期間だからです。</p>
+                    <p>大晦日の除夜の鐘、新年を迎えるカウントダウン、<br>
+                        初日の出への祈り。</p>
                     <p>これらは単なる風習ではありません。</p>
-                    <p>世界中の何十億という人々が、同時に「終わり」と「始まり」を意識し、祈りを捧げることで生まれる、地球規模の巨大な浄化と再生のエネルギーフィールドなのです。</p>
-                    <p>この神聖な流れにシンクロすることで、一個人の力では到底不可能な、魂の奥深くにまで達する浄化と変容が可能になります。</p>
+                    <p>世界中の何十億という人々が、同時に<br>
+                        「終わり」と「始まり」を意識し、<br>
+                        祈りを捧げることで生まれる、<br>
+                        地球規模の巨大な浄化と再生の<br>
+                        エネルギーフィールドなのです。</p>
+                    <p>この神聖な流れにシンクロすることで、<br>
+                        一個人の力では到底不可能な、<br>
+                        魂の奥深くにまで達する<br>
+                        浄化と変容が可能になります。</p>
                     <p class="emphasis-large">だから、年末に行う。</p>
-                    <p>『鳴響』は、この宇宙最大のボーナスタイムを最大限に活用し、あなたの人生を根底から好転させるために、完璧に設計されているのです。</p>
+                    <p>『鳴響』は、この宇宙最大のボーナスタイムを<br>
+                        最大限に活用し、あなたの人生を<br>
+                        根底から好転させるために、<br>
+                        完璧に設計されているのです。</p>
                 </div>
             </div>
         </section>
@@ -296,29 +347,49 @@
                 <h2 class="section-title warning-title fade-in">【警告】<br>なぜ「今年」を<br>逃してはいけないのか？</h2>
 
                 <div class="content-wrapper fade-in">
-                    <p class="warning-subtitle">– 2026年、”選別”の刻が迫る</p>
-                    <p>そして、心して聞いてください。<br>今年の年末年始は、これまでのどの年とも、全く意味が違います。</p>
-                    <p class="strong-text">ストレートに言えば、今回を逃せば、次はありません。</p>
-                    <p>なぜなら、私たちは今、約5年に一度の、単なる時代の節目に立っているのではなく、<br>
-                        数百年単位で続く古い時代が完全に終わりを告げ、新しい宇宙の法則が始まる、”次元上昇”とも呼べる歴史的な大転換期の、まさに”扉”の前に立っているからです。</p>
+                    <p class="warning-subtitle">2026年、”選別”の刻が迫る</p>
+                    <p>そして、心して聞いてください。<br>
+                        今年の年末年始は、これまでのどの年とも、<br>
+                        全く意味合いが違います。</p>
+                    <p class="strong-text">ストレートに言えば、<br>
+                        今回を逃せば、次はありません。</p>
+                    <p>なぜなら、私たちは今、約5年に一度の、<br>
+                        単なる時代の節目に立っているのではなく、<br>
+                        数百年単位で続く古い時代が完全に終わりを告げ、<br>
+                        新しい宇宙の法則が始まる、”次元上昇”とも呼べる</p>
+                        
+                       <p class="strong-text"> 歴史的な大転換期の、<br>
+                           まさに”扉”の前に立っているからです。</p>
 
-                    <p>2020年から続いた世界的パンデミックと大混乱は、その序章に過ぎません。<br>
-                        あれは、古い時代の膿を出し切るための、最終的な「大浄化」でした。</p>
+                    <p>2020年から続いた世界的パンデミックと<br>
+                        大混乱は、その序章に過ぎません。<br>
+                        あれは、古い時代の膿を出し切るための、<br>
+                        最終的な「大浄化」でした。</p>
 
-                    <p>そして、その先で私たちを待つ2026年は、新しい時代のエネルギーが本格的に地球を支配する「創造の元年」。<br>
-                        その言葉を証明するかのように、占いの中では風の時代や、西洋占星術、宿曜など主だった占いが来年は変わると話をされています。</p>
-
-                    <p class="emphasis-text">言い換えれば、龍神様に新しい地球の”住民”として、あなたがふさわしい存在かどうかが”選別”される年なのです。</p>
+                    <p>そして、その先で私たちを待つ2026年は、<br>
+                        新しい時代のエネルギーが<br>
+                        本格的に地球を支配する「創造の元年」。<br>
+                        その言葉を証明するかのように、<br>
+                        占いの中では風の時代や、西洋占星術、<br>
+                        宿曜など主だった占いが<br>
+                        来年は変わると話をされています。</p>
 
                     <p>この運命の分岐点において、古い時代の重たい波動を引きずったままでは、どうなるか。<br>
-                        今よりも余計、新しい時代の、軽やかで愛に満ちた豊かさの波に乗ることは、絶対にできないとうこと。</p>
-                    <p>それどころか、これまでの価値観にしがみつく人々は、時代の変化の渦に飲み込まれ、これまで以上の混乱と苦しみを味わうことになるでしょう。</p>
+                        今よりも余計、新しい時代の、軽やかで愛に<br>
+                        満ちた豊かさの波に乗ることは、絶対にできないとうこと。</p>
+                    <p>それどころか、これまでの価値観に<br>
+                        しがみつく人々は、時代の変化の渦に飲み込まれ、<br>
+                        これまで以上の混乱と苦しみを<br>
+                        味わうことになるでしょう。</p>
 
                     <p class="warning-box">だからこそ、警告します。<br>
-                        この年末年始が、あなたの未来を決定づける、最初で最後のチャンスなのだということを</p>
+                        この年末年始が、あなたの未来を決定づける、<br>
+                        最初で最後のチャンスなのだということを</p>
 
-                    <p>新しい時代の幕開けまでに、あなたの魂を浄化し、波動を完全に調律し、最高のスタートを切る。<br>
-                        そのために、この地上にもたらされた唯一にして絶対の道。</p>
+                    <p>新しい時代の幕開けまでに、あなたの魂を浄化し、<br>
+                        波動を完全に調律し、最高のスタートを切る。<br>
+                        そのために、この地上にもたらされた<br>
+                        唯一にして絶対の道。</p>
                     <p class="final-emphasis">それが、『鳴響』なのです。</p>
                 </div>
             </div>
@@ -333,7 +404,8 @@
                 </div>
 
                 <div class="closing-message fade-in">
-                    <p>詳細なご案内は、<br>準備が整い次第、選ばれた方だけにお届けいたします。</p>
+                    <p>詳細なご案内は、<br>準備が整い次第、<br>
+                        選ばれた方だけにお届けいたします。</p>
                     <p class="date">令和六年 十二月四日</p>
                     <p class="author">燈</p>
                 </div>
@@ -350,3 +422,4 @@
 
 
 </html>
+
