--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
                             喜びに変わります。<br>
                             他人の評価に一喜一憂する人生は終わり、<br>
                             何があっても「私は大丈夫」と<br>
-                            心から思える、<br>
-                            揺るぎない自信が内側から湧き上がってきます。</p>
+                            心から思える、揺るぎない自信が<br>
+                            内側から湧き上がってきます。</p>
                     </div>
                     <div class="benefit-item fade-in">
                         <h3 class="benefit-title">愛と豊かさに満ちた<br>人間関係</h3>
                         <p>あなたを傷つけ、エネルギーを奪うだけの<br>
-                            関係は自然と終わりを告げ、心から<br>
-                            信頼し合える仲間が、面白いように<br>
-                            引き寄せられてきます。<br>
+                            関係は自然と終わりを告げ、<br>
+                            心から信頼し合える仲間が、<br>
+                            面白いように引き寄せられてきます。<br>
                             世界はこんなにも優しく、<br>
                             愛に満ちていたのだと、<br>
                             涙が出るほどの感動を味わうでしょう。</p>
@@ -382,15 +382,17 @@
                         来年は変わると話をされています。<br>
 
                     <p>この運命の分岐点において、<br>
-                        古い時代の重たい波動を引きずったままでは、どうなるか？</p>
+                        古い時代の重たい波動を<br>
+                        引きずったままでは、どうなるか？</p>
                     
                         新しい時代の、軽やかで富に満ちた<br>
-                    　　豊かさの波に乗ることは、絶対にできないとうこと。</p>
+                    　　豊かさの波に乗ることは、<br>
+                    絶対にできないとうこと。</p>
                     <p>それどころか、時代の変化の渦に飲み込まれ、<br>
                         これまで以上の混乱と苦しみを<br>
                         味わうことになるでしょう。</p>
 
-                    <p class="warning-box">だからこそ、警告します。<br>
+                    <p class="warning-box"> <p class="warning-subtitle">だからこそ、警告します。</p>
                         この年末年始が、<br>
                         あなたの未来を決定づける、<br>
                         最初で最後のチャンスなのだということを</p>
@@ -431,5 +433,6 @@
 
 
 </html>
+
 
 
