--- a/index.html
+++ b/index.html
@@ -105,21 +105,23 @@
                             「心の雑音」なのです。</p>
                     </div>
 
-                    <p>私たちの願いは、本来、宇宙を震わせる力を持つ<br>
-                        「波動」が大きく関係しています。</p>
-                    <p>その音が清らかで、澄み切っているほど、<br>
-                        願いは光の速さで天に届き、現実のものとなり、<br>
-                        不安、焦り、自己否定といった<br>
-                        無数の雑音が混ざり合うと、<br>
-                        その波動は濁り、かき消され、<br>
-                        誰にも届かない、虚しい響きとなってしまうのです。</p>
+                   <p>願いが叶うかどうかは、<br>
+あなたの「波動」が整っているかどうかで<br>
+大きく変化する。</p>
 
-                    <p>あなたの願いが叶わないのは、<br>
-                        あなたの努力が足りないからでも、<br>
-                        才能がないからでもありません。</p>
+ <p class="strong-text">それは、まるで“音”のように。</p> 
+
+<p>心が澄んでいるほど、 願いはまっすぐ届きやすくなります。<br>
+ 逆に、不安や焦り、自己否定が強いと、 <br>
+その雑音によって願いの方向が乱れ、<br>
+願いが届きにくくなってしまう。</p>
 
                     <p class="emphasis-large">多くの方は、この事実を<br>
                         知らないからこそ、願いがかなわないのです。</p>
+                    
+                    <p>あなたの願いが叶わないのは、<br>
+                        あなたの努力が足りないからでも、<br>
+                        才能がないからでもありません。</p>
 
                     <p>では、どうすればいいのか？</p>
 
@@ -488,5 +490,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
