--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         確かに燃えているはずです。</p>
 
                     <div class="problem-highlight">
-                        <p>しかし、その美しい願いの裏側で、<br>こんな”呪いの言葉”も、一日中あなたの頭の中で<br>
+                        <p>しかし、その美しい願いの裏側で、<br>こんな”呪いの言葉”も、<br>
+                            一日中あなたの頭の中で<br>
                             鳴り響いていませんか？</p>
                         <ul class="curse-list">
                             <li>「どうせ私には、才能なんてない」</li>
@@ -117,7 +118,8 @@
                         願いが届きにくくなってしまう。</p>
 
                     <p class="emphasis-large">多くの方は、この事実を<br>
-                        知らないからこそ、願いがかなわないのです。</p>
+                        知らないからこそ、<br>
+                        願いがか叶わないのです。</p>
 
                     <p>あなたの願いが叶わないのは、<br>
                         あなたの努力が足りないからでも、<br>
@@ -126,7 +128,8 @@
                     <p>では、どうすればいいのか？</p>
 
                     <p class="strong-text">その答えは、<br>
-                        『鳴響（めいきょう）』を行うことなのです。</p>
+                        『鳴響（めいきょう）』を<br>
+                        行うことなのです。</p>
                 </div>
             </div>
         </section>
@@ -420,7 +423,8 @@
                     <p>なぜなら、私たちは今、<br>
                         単なる時代の節目に立っているのではなく、<br>
                         数百年単位で続く古い時代が完全に終わりを告げ、<br>
-                        新しい宇宙の流れが始まる、”時代の節目”とも呼べる</p>
+                        新しい宇宙の流れが始まる、<br>
+                        ”時代の節目”とも呼べる</p>
 
                     <p class="strong-text"> 歴史的な大転換期の、<br>
                         ”扉”の前に立っているからです。</p>
@@ -490,6 +494,7 @@
 
     <script src="script.js"></script>
 </body>
+
 
 
 </html>
