--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 </head>
 
 <body>
-    <div class="loading-screen">
-        <div class="loading-content">
-                <p>音は　祈り</p>
-                <p>響きは　道</p>
-                <p>龍は　導き</p>
-            </div>
-        </div>
+<div class="loading-screen">
+    <div class="loading-content">
+        <p>あなたが掴むべき</p>
+        <p>「<span class="highlight-gold">当選</span>」を</p>
+        <p><span class="highlight-strong">私が、確かなものにする</span></p>
     </div>
+</div>
 
     <!-- ヒーローセクション -->
     <header class="hero">
@@ -496,4 +495,5 @@
 
 
 </html>
+
 
